--- a/home.html
+++ b/home.html
@@ -23,12 +23,13 @@
         </ul>
         <div class="icons">
             <div class="wallet-box">
-            <form action="search.php">
-                <input type="text" id="search" name="search" class="searchbar">
-                <button type="submit"><h4>Хайх</h4></button>
-            </form>
-            <a href="user.php"><i class='bx bxs-user-circle' ></i></a>
-            <a href="#"><i class='bx bx-shopping-bag'></i></a>
+                <form action="search.php" style="display: inline-block;">
+                    <input type="text" id="search" name="search" class="searchbar" style="width: 250px;">
+                    <button type="submit"><h4>Хайх</h4></button>
+                </form>
+                <a href="user.php"><i class='bx bxs-user-circle'></i></a>
+                <a href="#"><i class='bx bx-shopping-bag'></i></a>
+            </div>
         </div>
     </header>
     <section class="shop" >
