--- a/index.html
+++ b/index.html
@@ -25,13 +25,14 @@
 
         <div class="icons">
             <div class="wallet-box">
-            <form action="search.php">
-                <input type="text" id="search" name="search" class="searchbar">
-                <button type="submit"><h4>Хайх</h4></button>
-            </form>
+                <form action="search.php" style="display: inline-block;">
+                    <input type="text" id="search" name="search" class="searchbar" style="width: 250px;">
+                    <button type="submit"><h4>Хайх</h4></button>
+                </form>
                 <a href="form.php"><button><h4>Нэвтрэх/Бүртгүүлэх</h4></button></a>
             </div>
         </div>
+        
     </header>
 
     <section class="shop" >
